src/components/Projects/style.css
#projects {
    margin: 50px 0;
}

.projectCards {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    padding: 0 30px;
}

.card {
    max-width: 330px;
    height: 240px;
    background-color: #212121;
    border: 1px solid #333333;
    display: flex;
    flex-direction: column;
    padding: 0 15px;
    margin-top: 20px;
    justify-content: space-evenly;
}

.card:hover {
    border: 1px solid #00DF5E;
}

.card:hover {
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
}

.cardImage {
    width: 300px;
    height: 130px;
    background-color: #171717;
    border: 1px solid #333333;
}

.cardImage img {
    width: 100%;
    height: 100%;
}

.cardTitle {
    font-size: 18px;
    color: #FFFFFF;
    font-weight: 300;
}

.stacks {
    font-size: 14px;
    color: #828282;
    font-weight: 300;
    margin-top: 5px;
}

